# messenger-cpp-r

./: .gitignore  CMakeLists.txt  Console_chat_by_Dima_Prihodko  Makefile  Makefile.server  README.md  chat_state.json  fullCode.txt  readme.md  zzz.txt
.console_chat/: client.ini  server.ini
Client/: main.cpp
Client-Server/Client/Handler/: ClientHandler.h
Client-Server/Client/LinuxClient/: LinuxClient.cpp
Client-Server/Client/WinClient/: WinClient.cpp
Client-Server/Server/ChatCore/: ChatOptions.h  Message.cpp
Client-Server/Server/ChatPages/: IPagesCore.cpp  IPagesCore.h  PrivateChatPage.cpp  PrivateChatPage.h  PublicChatPage.h  UserAuthPage.cpp  UserAuthPage.h  UserListPage.cpp  UserProfilePage.cpp  UserProfilePage.h
Client-Server/Server/DBClient/: DBClient.h  DBCore.cpp  DBCore.h  MySQLAPI.cpp
Client-Server/Server/Socket/Handler/: ServerChatMap.h  ServerHandler.cpp
Client-Server/Server/Socket/LinuxServer/: LinuxServer.cpp
Client-Server/Server/Socket/Logger/: LoggerThread.h
Client-Server/Server/Socket/SVCLI/: SVCLI.h
Client/Handler/: ClientHandler.cpp  ClientHandler.h
Client/LinuxClient/: LinuxClient.cpp  LinuxClient.h
Client/WinClient/: WinClient.cpp  WinClient.h
Misc/: BufferActions.cpp  BufferActions.h  Flags.h  Misc.cpp  Misc.h  SHA1.cpp  SHA1.h  Stream.cpp  Stream.h  UserInput.h  UserInputW.h
Mysqldump/: console_chat.sql
Server/: main.cpp
Server/ChatCore/: ChatOptions.h  Message.cpp  Message.h  User.cpp  User.h
Server/ChatPages/: IPagesCore.cpp  IPagesCore.h  PrivateChatPage.cpp  PrivateChatPage.h  PublicChatPage.cpp  PublicChatPage.h  UserAuthPage.cpp  UserAuthPage.h  UserListPage.cpp  UserListPage.h  UserProfilePage.cpp
Server/DBClient/: DBClient.cpp  DBClient.h  DBCore.cpp  DBCore.h  MySQLAPI.cpp  MySQLAPI.h  ODBC.cpp  ODBC.h
Server/Socket/Handler/: ServerChatMap.cpp  ServerChatMap.h  ServerHandler.cpp  ServerHandler.h
Server/Socket/LinuxServer/: LinuxServer.cpp  LinuxServer.h
Server/Socket/Logger/: Logger.cpp  Logger.h  LoggerThread.cpp  LoggerThread.h
Server/Socket/SVCLI/: SVCLI.cpp  SVCLI.h
Server/Socket/WinServer/: WinServer.cpp  WinServer.h
app/: main.cpp
app/Network/server/: server.cpp
app/Network/server/serverProps/: constants.h
app/networking/: props.h
app/networking/chatApp/: ChatApp.cpp  ChatApp.h
app/networking/client/: Client.cpp  Client.h
app/networking/main/: clientMain.cpp  serverMain.cpp
app/networking/netApp/: NetApp.cpp  NetApp.h
app/networking/server/: Server.cpp  Server.h
app/networking/utils/: NetworkInitializer.h  SocketHandler.h  messages.h  networkMessages.h
app/src/Chat/: Chat.cpp  Chat.h
app/src/Chat/utils/: Display.cpp  Display.h  Exceptions.h  Input.cpp  Input.h  Time.cpp  Time.h
app/src/Logs/enums/: Section.h
app/src/Logs/utils/: parsers.h  structMessage.h  structUser.h
app/src/Logs/utils/loader/: loadFromTxt.cpp
app/src/Logs/utils/parser/: parseMessage.cpp  parseUserByLogin.cpp
app/src/Message/: Message.cpp  Message.h
app/src/User/: User.cpp  User.h
database/: description.md
db/: DBConfig.h  constants.h
db/DatabaseManager/: DatabaseManager.cpp  DatabaseManager.h
db/SQLScriptsStorage/backUp/: tables.sql
db/SQLStorage/: dbDescription.md
db/SQLStorage/backUp/: console.sql
db/SQLStorage/backUp/indexes/: scripts.sql
db/SQLStorage/backUp/procedures/: scripts.sql
db/SQLStorage/backUp/shema/: shema_v1.drawio
db/SQLStorage/backUp/triggers/: scripts.sql
db/SQLStorage/v_1/: description.txt
db/SQLStorage/v_1/backUp/: console.txt
db/SQLStorage/v_1/backUp/triggers/: scripts.sql
db/SQLStorage/v_2/backUp/: console.txt  general_schema.drawio  general_schema.md  general_schema.uml  script.sql  testShemaConsoleLogs.txt
docs/descriptions/: README_rus.md  README_sp.md
extra/root/client/src/: Client.cpp  UI.cpp
extra/root/libs/tcp/: CMakeLists.txt
extra/root/libs/tcp/src/: TcpSocketWin.cpp
extra/root/server/include/: Database.h
extra/root/server/src/: Database.cpp  Logger.cpp  main.cpp
extra/root/server_gui/src/: mainwindowserver.cpp
include/PlatformOSInfo/: PlatformOSInfo.cpp  PlatformOSInfo.h
include/nlohmann/: json.hpp
network/client/ChatClient/: ChatClient.cpp  ChatClient.h
network/client/ClientConnection/: ClientConnection.cpp  ClientConnection.h
network/server/ChatServer/: ChatServer.cpp  ChatServer.h
network/server/ClientHandler/: ClientHandler.cpp  ClientHandler.h
network/server/ServerConnection/: ServerConnection.cpp  ServerConnection.h
network/utils/: messages.h
root/app/client/: CMakeLists.txt
root/app/client/include/: Client.h  UI.h
root/app/libs/tcp/: CMakeLists.txt
root/app/libs/tcp/include/: tcp_config.h
root/app/libs/tcp/include/tcp/: TcpSocketWin.h
root/app/libs/tcp/src/: TcpSocketLinux.cpp
root/app/libs/threading/: CMakeLists.txt
root/app/libs/threading/include/: threading_config.h
root/app/server/: CMakeLists.txt
root/app/server/include/: ClientHandler.h  Server.h
root/app/server_gui/src/: main.cpp
root/client/: Makefile
root/client/include/: Client.h  UI.h
root/client/src/: Client.cpp  UI.cpp  main.cpp
root/database/: init.sql
root/libs/tcp/: Makefile
root/libs/tcp/include/: tcp_config.h
root/libs/tcp/src/: SocketFactory.cpp  TcpSocketLinux.cpp  TcpSocketWin.cpp
root/libs/threading/: Makefile
root/libs/threading/include/: threading_config.h
root/libs/threading/src/: Logger.cpp  ThreadPool.cpp
root/server/: CMakeLists.txt  Makefile
root/server GUI/src/: mainwindowserver.cpp
root/server/include/: ClientHandler.h  Database.h  Logger.h  Server.h
root/server/src/: ClientHandler.cpp  Database.cpp  Logger.cpp  Server.cpp  main.cpp
root/serverGUI/: CMakeLists.txt
root/serverGUI/include/: MainWindowServer.h
root/serverGUI/ui/: MainWindowServer.ui
root/server_gui/: CMakeLists.txt
root/server_gui/include/: MainWindowServer.h
src/: main.cpp
src/Chat/: Chat.cpp  Chat.h  Display.h  Exceptions.h  Input.cpp  Input.h  Time.cpp  Time.h
src/Chat/utils/: Input.cpp
src/Message/: Message.cpp  Message.h
src/User/: User.cpp  User.h
(+8 files in other folders)
